--- a/uksl/Views/Account/ConfirmEmail.cshtml
+++ b/uksl/Views/Account/ConfirmEmail.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Confirm Email";
+    ViewBag.Title = "Підтвтердження пошти";
 }
 
 <h2>@ViewBag.Title.</h2>
 <div>
     <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Дякуємо за підтвердження вашої електронної пошти. Будь-ласка @Html.ActionLink("натисніть тут, щоб увійти", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
