--- a/uksl/Views/Home/About.cshtml
+++ b/uksl/Views/Home/About.cshtml
@@ -1,7 +1,119 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿@*@{
+        ViewBag.Title = "Про нас";
+    }*@
+@*<h2>@ViewBag.Title.</h2>*@
+@*<h3>@ViewBag.Message</h3>*@
+<div class="about">
+    <p>Спільнота комп'ютерного спорту України (УКСЛ) - громадська організація, відповідальна за розвиток в Україні масового комп'ютерного спорту (кіберспорту).</p>
+    <p>Мета: Створення всеукраїнської кіберспортивной студентської ліги.</p>
+    <p>Крім того, у УКСЛ є мета побудувати повноцінну інфраструктуру масового кіберспорту: з навчанням і атестацією суддів, акредитацією майданчиків, підготовкою методичних матеріалів, освітніми проектами, розвитком клубів і секцій.</p>
+    <p>Важливе завдання УКСЛ - інформаційна. Спікери УКСЛ планують регулярно виступають на форумах і конференціях, роз'яснювати нюанси комп'ютерного спорту в ЗМІ.</p>
 
-<p>Use this area to provide additional information.</p>
+    <p>УКСЛ - спільнота джерелом фінансування якого є гроші партнерів і спонсорів. (Будь-який охочий може підтримати діяльність спільноти).</p>
+    <p>Ми плануємо надавати консалтингові та організаційні послуги корпораціям, зацікавленим в інтеграції кіберспортивних активностей.</p>
+    <p>У мене є цікавий кіберспортивний проект. Я можу попросити у УКСЛ допомоги з його реалізацією / фінансуванням?</p>
+    <p>УКСЛ формує базу найцікавіших проектів, і ті з них, які здадуться нам перспективними та відповідають завданням розвитку кіберспорту в Україні, можуть бути схвалені для отримання нашої методологічної, інформаційної, організаційної або іншої підтримки. Надішліть детальний опис вашого проекту на адресу <a href="mailto:uksl.gaming@gmail.com?subject=%D0%A1%D0%BF%D1%96%D0%B2%D1%80%D0%BE%D0%B1%D1%96%D1%82%D0%BD%D0%B8%D1%86%D1%82%D0%B2%D0%BE.%20%D0%9E%D0%BF%D0%B8%D1%81%20%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D1%83.">uksl.gaming@gmail.com</a>.</p>
+
+    <h3>УКСЛ не планує проводити такі турніри, як The International або EPICENTER?</h3>
+    <p>Наше завдання - розвиток масового кіберспорту. У нас немає мети зробити з наших змагань виключно комерційне шоу, де за призовий фонд у мільйони доларів змагатимуться кращі гравці світу. Замість цього ми надаємо можливість гравцям з усієї України отримати повноцінний змагальний досвід і заявити про себе в кіберспортивній спільноті в ході проведених нами відкритих турнірів, кубків, Ліг і Чемпіонатів.</p>
+    <hr />
+    <h1>Про кіберспорт</h1>
+    <h3>Що таке кіберспорт?</h3>
+    <p>
+        Комп'ютерний спорт - (кіберспорт, е-спорт, електронний спорт (англ. Cybersport, e-Sport, esport, esports, electronic sport) - вид змагальної діяльності та спеціальної практики підготовки до змагань на основі комп'ютерних та / або відеоігор, де гра надає середу взаємодії об'єктів управління, забезпечуючи рівні умови змагань людини з людиною або команди з командою.
+    </p>
+    <p>
+        Тобто кіберспорт - це не змагання людини з комп'ютером, це саме змагання людини з людиною або команди з командою, де комп'ютер виступає в ролі спортивного інвентарю, а гра забезпечує віртуальний простір і правила змагання.
+    </p>
+    <h3>
+        Чому кіберспорт - це спорт?
+    </h3>
+    <p>
+        Є визначення спорту: це «організована за певними правилами діяльність людей, що складається в зіставленні їх фізичних та / або інтелектуальних здібностей, а також підготовка до цієї діяльності та міжособистісні відносини, що виникають в її процесі». Кіберспорт під це визначення повністю підпадає.
+    </p>
+    <p>
+        Нас також часто дорікають в тому, що в ході киберспортивних тренувань і змагань організм не працює і не розвивається з точки зору фізіології. Це не так: вплив комп'ютерного спорту на людину вивчалося в ході лабораторних досліджень. Було з'ясовано, що рівень мобілізації організму людини під час фінальної стадії турніру можна порівняти з керуванням гоночним автомобілем або з забігом на стометрівку - відбувається величезний викид гормонів, частішає серцебиття, гравець повністю напружений і сконцентрований.
+    </p>
+    <h3>
+        Які ігри вважаються кіберспортом?
+    </h3>
+    <p>
+        Кіберспортивних ігор всього близько 20 з мільйонів що існує. Щоб гра могла називатися кіберспортивной, вона повинна відповідати ряду критеріїв: в ній повинен бути елемент змагання, вона зобов'язана бути безсюжетною, короткосесійною і забезпечувати гравцям спочатку рівні умови.
+    </p>
+    <p>
+        Ось приклади кіберспортивних ігор:
+        <ul>
+            <li>League of Legends</li>
+            <li>Dota</li>
+            <li>Heroes of the Storm</li>
+            <li>Counter-Strike</li>
+            <li>Overwatch</li>
+            <li>Hearthstone</li>
+            <li>Eternal</li>
+            <li>StarCraft</li>
+            <li>WOT</li>
+            <li>FIFA</li>
+        </ul>
+    </p>
+    <h3>
+        Як потрапити в кіберспорт? Чи є державні секції і якщо немає, то коли планується їх відкривати?
+    </h3>
+    <p>
+        Вкрай простий і низький «поріг входу» в кіберспорт - одне з його ключових переваг. Досить зібрати команду або брати участь в індивідуальних дисциплінах, показувати хороші результати в інтернеті або на змаганнях - наприклад, на Кубку України - і чекати запрошення від кіберспортивних організацій. Стрімінгові сервіси та онлайн-матеріали представляють сьогодні відмінні можливості для навчання, «спортивне обладнання» також є цілком доступним, що добре видно по числу і активності учасників наших змагань.
+    </p>
+    <p>
+        Паралельно з цим ми плануємо відкриття секцій, бо без них важко уявити собі повноцінний розвиток спортивної інфраструктури. Попри всі переваги онлайн-навчання, заняття з викладачами є великою цінністю. Крім того, будь-яка секція сприяє виникненню команд і зростання змагального духу. Також секція допомагає сформувати основу будь-якого спорту - систему тренувань.
+    </p>
+    <h3>
+        Чи не є небезпечним кіберспорт для здоров'я?
+    </h3>
+    <p>
+        Дослідження показали, що люди, які займаються цим як спортом, проводять в два рази менше часу за комп'ютером, ніж людина, яка грає просто для задоволення. Після закінчення тренування спортсменам вже нецікаво йти просто грати на публічних серверах. Якщо ви подивіться на професійні команди, то у більшості є персональні тренери. Вони підтримують свою фізичну форму, знають, що таке зарядка для очей, як правильно обладнати своє робоче місце, який поставити монітор.
+    </p>
+    <p>
+        Крім того, вплив комп'ютерного спорту на людину вивчалося в ході лабораторних досліджень. Було з'ясовано, що рівень мобілізації організму людини під час фінальної стадії турніру можна порівняти з керуванням гоночним автомобілем або забігом на стометрівку - йде величезний викид гормонів, частішає серцебиття, гравець повністю напружений і сконцентрований.
+    </p>
+    <h3>
+        Моя дитина цілий день сидить біля комп'ютера і його не відтягнути - це погано?
+    </h3>
+    <p>
+        Комп'ютерні ігри - це не завжди кіберспорт, а геймер - не завжди спортсмен. По-перше, ми проти браузерних іграшок, які затягують людей і ламають робочий процес. По-друге, всього близько 20 ігор відносяться до кіберспорту. Всі вони - безсюжетні, з короткими ігровими сесіями і не викликають залежність. Потрібно розуміти, що не кожен гравець в Dota 2 є спортсменом. Є велика різниця між тим, що ти виходиш пограти в футбол у дворі, і тим, що ти ходиш в спортивну секцію. Тому що спорт - це, в першу чергу, система тренувань.
+    </p>
+    <p>
+        У професійних команд така система є. У неї входять теоретичні заняття, практична частина, аналіз помилок і елементи відпочинку. Наші дослідження показали, що люди, які займаються цим як спортом, проводять в два рази менше часу за комп'ютером, ніж людина, яка грає просто для задоволення.
+    </p>
+    <p>
+        Після закінчення тренування цим хлопцям вже нецікаво йти грати в паблік, тому що там зовсім інший рівень. Вони витрачають вільний час на інші речі. Якщо ви подивіться на професійні команди, то у більшості є персональні тренери. Вони підтримують свою фізичну форму, знають, що таке зарядка для очей, як правильно обладнати своє робоче місце, який поставити монітор. І все це є частиною їхньої роботи.
+    </p>
+    <p>
+        Не потрібно забувати, що ключовим моментом спорту є системний підхід. Якщо людина хоче займатися кіберспорту, то він повинен робити це системно.
+    </p>
+    <h3>Які переваги дає дитині / підлітку заняття кіберспорту?</h3>
+    <p>
+        Це залежить від того, в гри який спортивної дисципліни (якого жанру) дитина грає. Наприклад, при грі в «бойову арену» або «стратегію реального часу» розвиваються стратегічне мислення і швидкість реакції, в будь-яких командних дисциплінах - командна взаємодія і лідерські якості, в «змагальних головоломках» - теж стратегічне мислення, вміння прораховувати ситуацію. Звичайно, як у будь-якому спорті, в кіберспорті загартовується воля до перемоги, вміння визнавати та опрацьовувати свої помилки, з повагою ставитися до суперників і вчитися у них.
+    </p>
+    <p>
+        Якщо говорити про фізіологію, то фахівці УКСЛ проводили тести, у які грають спортсменів фіксувалися показники датчиків до початку гри, під час і після. З'ясувалося, що організм людини під час фінальної стадії турніру мобілізується так само, як під час з управління гоночним автомобілем або забігу на стометрівку: йде величезний викид гормонів, частішає серцебиття, гравець повністю напружений і сконцентрований.
+    </p>
+    <h3>
+        Який середній вік людей, які займаються комп'ютерним спортом? В якому віці варто почати займатися?
+    </h3>
+    <p>
+        Це залежить від дисципліни, наприклад, чи потрібна в ній надшвидкісна реакція чи ні. Там, де фактор реакції є ключовим, - це спорт молодих, і в 25 років настає «спортивна старість». У таких дисциплінах гравець виходить на пік форми в районі 19-20 років. Але в будь-якому випадку є свої винятки, коли гравці старше 30 років виступають на гідному рівні.
+    </p>
+    <p>
+        В інших дисциплінах, наприклад, в змагальних головоломках, де швидкість реакції не дуже важлива, а на перший план виходить психологія, середній вік становить вже 32 роки.
+    </p>
+    <p>
+        Якщо говорити про сьогоднішній день, то ми рекомендуємо приступати до занять комп'ютерним спортом з 14 років. Однак в перспективі найближчих декількох років можливо буде запропонувати якісну програму навчання дітей вже з молодшого шкільного віку (безумовно, в повній відповідності з нормами законодавства, що захищають дітей від потенційно небезпечної інформації).
+    </p>
+    <h3>
+        Я вважаю, що кіберспорт - це не спорт !?
+    </h3>
+    <p>
+        Кіберспорт - це новий вид спорту, який отримав закономірний розвиток завдяки появі в комп'ютерних іграх змагального аспекту, що веде до самовдосконалення і розвитку корисних в реальному житті навичок.
+    </p>
+    <p>
+        Втім, ви можете залишитися при своїй думці. Колись і паровоз вважали породженням диявола.
+    </p>
+</div>
