--- a/uksl/Views/Account/ForgotPassword.cshtml
+++ b/uksl/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model uksl.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = "Забули пароль?";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
+    <h4>Введіть ваш email.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
+            <input type="submit" class="btn btn-default" value="Надіслати" />
         </div>
     </div>
 }
