--- a/uksl/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/uksl/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Підтвердження забутого паролю";
 }
 
 <hgroup class="title">
@@ -7,7 +7,7 @@
 </hgroup>
 <div>
     <p>
-        Please check your email to reset your password.
+        Будь-ласка, перевірте свою електронну пошту, щоб скинути свій пароль.
     </p>
 </div>
 	
