--- a/uksl/Views/Account/ResetPassword.cshtml
+++ b/uksl/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model uksl.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Скинути пароль";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
+    <h4>Скинути пароль.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
+            <input type="submit" class="btn btn-default" value="Скинути" />
         </div>
     </div>
 }
