--- a/uksl/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/uksl/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Підтвердження скидання паролю";
 }
 
 <hgroup class="title">
@@ -7,6 +7,6 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Ваш пароль скинуто. Буль-ласка @Html.ActionLink("натисніть тут, щоб увійти", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
