--- a/uksl/Views/Account/SendCode.cshtml
+++ b/uksl/Views/Account/SendCode.cshtml
@@ -1,20 +1,20 @@
 ﻿@model uksl.Models.SendCodeViewModel
-@{
+@*@{
     ViewBag.Title = "Send";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title.</h2>*@
 
 @using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
     @Html.Hidden("rememberMe", @Model.RememberMe)
-    <h4>Send verification code</h4>
+    <h4>Надішліть код підтвердження</h4>
     <hr />
     <div class="row">
         <div class="col-md-8">
-            Select Two-Factor Authentication Provider:
+            Виберіть постачальника аутентифікації:
             @Html.DropDownListFor(model => model.SelectedProvider, Model.Providers)
-            <input type="submit" value="Submit" class="btn btn-default" />
+            <input type="submit" value="Надіслати" class="btn btn-default" />
         </div>
     </div>
 }
