--- a/uksl/Views/Home/Contact.cshtml
+++ b/uksl/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Наші контакти";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@*<h3>@ViewBag.Message</h3>*@
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    @*One Microsoft Way<br />
+    Redmond, WA 98052-6399<br />*@
+    <abbr title="Телефон">Тел:</abbr>
+    +380973109104
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    @*<strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />*@
+    <strong>Email:</strong> <a href="mailto:uksl.gaming@gmail.com">uksl.gaming@gmail.com</a>
 </address>
