--- a/uksl/Views/Shared/Lockout.cshtml
+++ b/uksl/Views/Shared/Lockout.cshtml
@@ -1,10 +1,10 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Locked Out";
+    ViewBag.Title = "Заблокований";
 }
 
 <hgroup>
-    <h1 class="text-danger">Locked out.</h1>
-    <h2 class="text-danger">This account has been locked out, please try again later.</h2>
+    <h1 class="text-danger">Заблокований.</h1>
+    <h2 class="text-danger">Цей обліковий запис заблоковано, спробуйте пізніше.</h2>
 </hgroup>
