--- a/uksl/Views/Home/Contact.cshtml
+++ b/uksl/Views/Home/Contact.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
     ViewBag.Title = "Наші контакти";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 @*<h3>@ViewBag.Message</h3>*@
-
+<br>
 <address>
     @*One Microsoft Way<br />
     Redmond, WA 98052-6399<br />*@
-    <abbr title="Телефон">Тел:</abbr>
-    +380973109104
+    <strong>Тел:</strong>
+    +38 097 310 91 04
 </address>
 
 <address>
