--- a/uksl/Content/Site.css
+++ b/uksl/Content/Site.css
@@ -54,17 +54,18 @@ ul li:before{
 }
 
 .regulation-menu {
-    background: rgba(0, 0, 0, 0.40);
     background: rgb(0, 0, 0);
     position: fixed;
     width: 390px;
     left: -370px;
-    top: 200px;
+    top: 100px;
     transition: left 0.5s ease-out 0.0s;
 }
+
     .regulation-menu:hover {
         left: 0px;
     }
+
     .regulation-menu a {
         margin: 5px 10px;
         text-decoration: none;
@@ -72,11 +73,17 @@ ul li:before{
         display: block;
         color: #999999;
         /*background: rgba(0, 0, 0, 0.40);*/
+        background: linear-gradient(to left, rgb(0, 0, 0) 50%, rgba(159, 38, 38, 0.40) 50%);
+        background-size: 200% 100%;
+        background-position: right bottom;
+        transition: background-position 0.5s ease-out 0.0s, color 0.5s ease-out 0.0s;
     }
-    .regulation-menu a:hover{
-        background: rgba(159, 38, 38, 0.40);
-        color:#dc1010;
-    }
+
+        .regulation-menu a:hover {
+            /*background: rgba(159, 38, 38, 0.40);*/
+            color: #dc1010;
+            background-position: left bottom;
+        }
 .anch{
     height:50px;
 }
