--- a/uksl/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/uksl/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@model uksl.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
+<h4>Вхід за допомогою інших облікових записів.</h4>
 <hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
@@ -19,7 +19,7 @@
             <div id="socialLoginList">
                 <p>
                     @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        <button type="submit" class="btn btn-default col-md-10 btn-uksl" id="@p.AuthenticationType" name="provider" value="Увійти через обліковий запис @p.AuthenticationType" title="Вхід за допомогою @p.Caption акаунту"><span>Увійти через обліковий запис @p.AuthenticationType</span></button>
                     }
                 </p>
             </div>
