--- a/uksl/Views/Account/Login.cshtml
+++ b/uksl/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Вхід за допомогою олікового запису УКСЛ</h4>
+                <h4>Вхід за допомогою облікового запису УКСЛ.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
