--- a/uksl/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/uksl/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -19,7 +19,7 @@
             <div id="socialLoginList">
                 <p>
                     @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-default col-md-10 btn-uksl" id="@p.AuthenticationType" name="provider" value="Увійти через обліковий запис @p.AuthenticationType" title="Вхід за допомогою @p.Caption акаунту"><span>Увійти через обліковий запис @p.AuthenticationType</span></button>
+                        <button type="submit" class="btn btn-default col-md-10 btn-uksl" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Вхід за допомогою @p.Caption акаунту"><span>Увійти через обліковий запис @p.AuthenticationType</span></button>
                     }
                 </p>
             </div>
