--- a/uksl/Views/Account/Register.cshtml
+++ b/uksl/Views/Account/Register.cshtml
@@ -33,7 +33,7 @@
         <div class="col-md-offset-2 col-md-10">
             <div class="checkbox">
                 <input type="checkbox" id="chkbGamer"/>
-                <label>Беру участь в іграх</label>
+                <label>Я буду приймати участь в турнірах</label>
             </div>
         </div>
     </div>
@@ -46,8 +46,9 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.SelectedUniversity, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(m=>m.SelectedUniversity.Id, (IEnumerable<SelectListItem>)Model.UniversityList, new { @class = "form-control" })
+            <div class="col-md-10 ui-widget">
+                <input id="university" class="form-control"/>
+                @*@Html.TextBoxFor(m=>m.SelectedUniversity.Id,  new { @class = "form-control" })*@
             </div>
         </div>
         <div class="form-group">
@@ -62,11 +63,25 @@
                 @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
             </div>
         </div>
+        <div class="form-group" id = "middleName">
+            @Html.LabelFor(m => m.MiddleName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.MiddleName, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <div class="checkbox">
+                    <input type="checkbox" id="chkbMiddleName" />
+                    <label>Підтверджую, по-батькові відсутнє</label>
+                </div>
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(m => m.BirthDate, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                <input type="date" class="form-control" value="@Model.BirthDate"/>
-                @*@Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control date-picker" })*@
+                @*<input type="date" class="form-control" value="@Model.BirthDate"/>*@
+                @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control date-picker", @readonly="readonly" })
             </div>
         </div>
     </div>
@@ -79,10 +94,11 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/script/register.js")
 }
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>
+   @* <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>*@
+@*<script>
     $(function () {
         // This will make every element with the class "date-picker" into a DatePicker element
         
@@ -95,4 +111,4 @@
             }
         });
     });
-</script>
+</script>*@
