dapper, DAL, Register(univers json)

--- a/uksl/Content/Site.css
+++ b/uksl/Content/Site.css
@@ -124,6 +124,18 @@ ul li:before {
 .date-picker:hover {
     cursor: pointer;
 }
-.ui-autocomplete-loading {
-    background: white url("Images/Dual_Ring-1s-16px.gif") right center no-repeat;
+/*.ui-autocomplete-loading {
+    background: black url("Images/Dual_Ring-1s-16px.gif") right center no-repeat;
+}*/
+.ui-autocomplete {
+    max-height: 200px;
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+}
+/* IE 6 doesn't support max-height
+   * we use height instead, but this forces the menu to always be this tall
+   */
+* html .ui-autocomplete {
+    height: 200px;
 }
