--- a/uksl/Views/Account/Register.cshtml
+++ b/uksl/Views/Account/Register.cshtml
@@ -33,7 +33,7 @@
         <div class="col-md-offset-2 col-md-10">
             <div class="checkbox">
                 <input type="checkbox" id="chkbGamer"/>
-                <label>Я буду приймати участь в турнірах</label>
+                <label>Я буду приймати участь в турнірах.</label>
             </div>
         </div>
     </div>
@@ -73,7 +73,7 @@
             <div class="col-md-offset-2 col-md-10">
                 <div class="checkbox">
                     <input type="checkbox" id="chkbMiddleName" />
-                    <label>Підтверджую, по-батькові відсутнє</label>
+                    <label>Підтверджую, що по-батькові відсутнє.</label>
                 </div>
             </div>
         </div>
@@ -87,7 +87,15 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Зареєструватися" />
+            <div class="checkbox">
+                <input type="checkbox" id="chkbPersonal" />
+                <label>Надаю згоду на обробку та зберігання моїх персональних даних.</label>
+            </div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-default" value="Зареєструватися" disabled/>
         </div>
     </div>
 }
