--- a/uksl/Views/Manage/Index.cshtml
+++ b/uksl/Views/Manage/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿@model uksl.Models.IndexViewModel
 @{
-    ViewBag.Title = "Налаштування";
+    ViewBag.Title = "Мій кабінет";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Змініть налаштування свого облікового запису</h4>
+    @*<h4>Змініть налаштування свого облікового запису</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>Пароль:</dt>
         <dd>
-            [
+
             @if (Model.HasPassword)
             {
                 @Html.ActionLink("Змінити пароль", "ChangePassword")
@@ -21,22 +21,22 @@
             {
                 @Html.ActionLink("Створити", "SetPassword")
             }
-            ]
+
         </dd>
-        <dt>External Logins:</dt>
+        <dt>Вхід через зовнішні ресурси:</dt>
         <dd>
-            @Model.Logins.Count [
-            @Html.ActionLink("Налаштування", "ManageLogins") ]
+            @Model.Logins.Count -
+            @Html.ActionLink("Налаштувати", "ManageLogins")
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
+
              See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
+
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
+        @*
             <dt>Phone Number:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None")
@@ -56,32 +56,120 @@
                 }
             </dd>
         *@
-        <dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
-            @*@if (Model.TwoFactor)
-                {
-                    using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        @*<dt>Two-Factor Authentication:</dt>
+            <dd>
+                <p>
+                    There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
+                    for details on setting up this ASP.NET application to support two-factor authentication.
+                </p>
+                @if (Model.TwoFactor)
                     {
-                        @Html.AntiForgeryToken()
-                        <text>Enabled
-                        <input type="submit" value="Disable" class="btn btn-link" />
-                        </text>
+                        using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Enabled
+                            <input type="submit" value="Disable" class="btn btn-link" />
+                            </text>
+                        }
                     }
-                }
-                else
-                {
-                    using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                    else
                     {
-                        @Html.AntiForgeryToken()
-                        <text>Disabled
-                        <input type="submit" value="Enable" class="btn btn-link" />
-                        </text>
+                        using (Html.BeginForm("EnableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <text>Disabled
+                            <input type="submit" value="Enable" class="btn btn-link" />
+                            </text>
+                        }
                     }
-                }*@
-        </dd>
+            </dd>*@
     </dl>
+    @using (Html.BeginForm("Update", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @*<h4>Створити новий акаунт</h4>*@
+        <hr />
+        @*@Html.ValidationSummary("", new { @class = "text-danger" })*@
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(m => m.NickName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.NickName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.NickName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.UniversityName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10 ui-widget">
+                @Html.TextBoxFor(m => m.UniversityName, new { @class = "form-control" })
+                @*<input id="university" class="form-control"/>*@
+                @Html.ValidationMessageFor(m => m.UniversityName, "", new { @class = "text-danger" })
+                @Html.Hidden("UniversityId", Model.UniversityId)
+                @*<input type="hidden" id="UniversityId" name="UniversityId">*@
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group" id="middleName">
+            @Html.LabelFor(m => m.MiddleName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.MiddleName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.MiddleName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <div class="checkbox">
+                    <input type="checkbox" id="chkbMiddleName" />
+                    <label>Підтверджую, що по-батькові відсутнє.</label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.BirthDateText, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @*<input type="date" class="form-control" value="@Model.BirthDate"/>*@
+                @Html.TextBoxFor(m => m.BirthDateText, new { @class = "form-control date-picker", @readonly = "readonly" })
+                @Html.ValidationMessageFor(m => m.BirthDateText, "", new { @class = "text-danger" })
+                @Html.Hidden("BirthDate", Model.BirthDate)
+                @*<input type="hidden" id="BirthDate" name="BirthDate">*@
+            </div>
+        </div>
+
+        @*<div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <div class="checkbox">
+                        <input type="checkbox" id="chkbPersonal" />
+                        <label>Надаю згоду на обробку та зберігання моїх персональних даних.</label>
+                    </div>
+                </div>
+            </div>*@
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" class="btn btn-default" value="Оновити" />
+            </div>
+        </div>
+    }
 </div>
+@section Scripts {
+    @Scripts.Render("~/script/manage.js")
+}
